--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "pre-commit": ["build"],
   "files": [
     "dist"
   ],
@@ -18,19 +19,21 @@
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/svelte": "^5.3.19",
     "babel-loader": "^8.1.0",
+    "pre-commit": "^1.2.2",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.24.0",
-    "svelte-loader": "^2.13.6",
-    "@storybook/addon-knobs": "^5.3.19",
     "sirv-cli": "^0.4.4",
-    "uikit": "^3.5.4"
+    "svelte": "^3.24.0",
+    "svelte-loader": "^2.13.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "uikit": "^3.5.4"
+  }
 }
